Removed Powerplay materials from Irrelevant filter
Added an elevated privileges check for Windows at the start of the application to prevent issues with running as Administrator
Fixed engineer image locked size and resizing issue when switching text size
Fixed stats on pre-engineered power distributor showing positive effects as negative
Add new pre-engineered Fragment Cannon from community goal

Version 2.196
-------------
Updated AR detection for bartender. Should give better results at the cost of potential false positives.

Version 2.195
-------------
Added colorblind support (WIP). You can select the style in Settings > General
Added fontawesome and replaced the chevron down icon for the wishlist items

Version 2.194
-------------
Some AR detection improvements. Prevent text from appearing on bartender sell menu, since it is not supported.
Changed FC and WL to FLEETCARRIER and WISHLIST in the AR overlay for clarity
Fixed column spacing in wishlist text export
Fixed wishlist counts for higher quantities in trade suggestions, exports and AR overlay
Redesign of commodity and material cards to include categories
Updated Russian and Chinese translations

Version 2.193
-------------
Fix new CG pre-engineered missile rack blueprints
Include passive power consumers in ship power label calculation

Version 2.192
-------------
Fix crash for shortest path calculations when a blueprint with no grades was configured
Handle CarrierTradeOrder events after startup

Version 2.191
-------------
Fix crash for shortest path calculations when no experimental effect was selected

Version 2.190
-------------
Fix shortest path calculations for horizons module blueprints with effects and stack quantities

Version 2.189
-------------
Remove debug notification

Version 2.188
-------------
Fixed a bug in the shipbuilder with hardpoint locations for certain slots pointing to the wrong location

Version 2.187
-------------
Redesign of wishlist blueprints